--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,22 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="/css/auth.css">
+
 </head>
 <body>
-    <h1>Login page</h1>
+  <div class="container">
+     <h1>Login page</h1>
 
     <form action="/auth/login" method="post">
-        <div>
+        <div class="input-container">
             <label for="email">Email:</label>
             <input type="email" name="email" id="email" required>
         </div>
-        <div>
+        <div class="input-container">
             <label for="password">Password:</label>
             <input type="password" name="password" id="password">
         </div>
-        <div>
+        <div class="submit-container">
             <button>Login</button>
         </div>
     </form>
+  </div>
+
+    <p>
+    Don't have an account? <a href="/auth/signup">Signup</a>
+  </p>
 </body>
 </html>
