--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,23 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/auth.css">
+
     <title>Signup for an ccount</title>
 </head>
 <body>
-    <h1>Signup</h1>
+  <div class="container">
+   <h1>Signup</h1>
 
     <form action="/auth/signup" method="post">
-        <div>
+        <div class="input-container">
             <label for="email">Email:</label>
             <input type="email" name="email" id="email" required>
         </div>
-        <div>
+        <div class="input-container">
             <label for="password">Password:</label>
             <input type="password" name="password" id="password">
         </div>
-        <div>
-            <button>Signup</button>
+        <div class="submit-container">
+            <button >Signup</button>
         </div>
     </form>
+  </div>
+
+  <p>
+    Already have an account? <a href="/auth/login">Login</a>
+  </p>
 </body>
 </html>
